--- a/envolve/src/app/styles/globals.css
+++ b/envolve/src/app/styles/globals.css
@@ -1,10 +1,8 @@
 @import "tailwindcss";
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 :root {
   --background: #ffffff;
@@ -26,6 +24,7 @@
 }
 
 body {
+  @apply bg-white;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
